[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ase-ace"
version = "0.1.0"
description = "ASE calculators for ACE potentials (socket and compiled library backends)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ACEsuit contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["ase", "ace", "molecular-dynamics", "machine-learning", "interatomic-potentials"]
dependencies = [
    "ase>=3.22",
    "numpy>=1.20",
]

[project.optional-dependencies]
# ACELibraryCalculator - compiled .so backend
lib = [
    "matscipy>=0.8",
]

# ACEJuliaCalculator - JuliaCall backend
julia = [
    "juliacall>=0.9.20",
    "juliapkg>=0.1.10",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "matscipy>=0.8",
]

# All optional dependencies
all = [
    "matscipy>=0.8",
    "juliacall>=0.9.20",
    "juliapkg>=0.1.10",
]

[project.urls]
Homepage = "https://github.com/ACEsuit/ACEpotentials.jl"
Documentation = "https://acesuit.github.io/ACEpotentials.jl"
Repository = "https://github.com/ACEsuit/ACEpotentials.jl"

[tool.hatch.build.targets.wheel]
packages = ["src/ase_ace"]

# Include juliapkg.json for Julia dependency management
[tool.hatch.build.targets.wheel.force-include]
"src/ase_ace/juliapkg.json" = "ase_ace/juliapkg.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
